fix(server): disable horizontal scroll on mobile (#8488)

--- a/server/assets/marketing/css/routes/home.css
+++ b/server/assets/marketing/css/routes/home.css
@@ -390,6 +390,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    margin: 0;
     width: 100%;
     overflow: hidden;
 
